--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "solidity.compileUsingRemoteVersion": "v0.8.20+commit.a1b79de6",
-    "solidity.defaultCompiler": "remote"
+    "solidity.compileUsingRemoteVersion": "v0.8.20+commit.a1b79de6"
 }
